# jot

./: .gitignore  CONTRIBUTORS.md  README.md  jot.py  pyproject.toml
.github/workflows/: code-quality.yaml  lint.yaml  quality.yaml  ruff.yaml  tests.yaml
src/jot/: __init__.py  cli.py  core.py  files.py  options.py
src/jott/: __init__.py  cli.py  core.py
tests/: test_core.py  test_files.py  test_options.py
