[project]
name = "jot"
version = "0.2.10"
description = "Minimal opinionated Python CLI to jot timestamped thoughts."
readme = "README.md"
authors = [
    { name = "Matt Dray", email = "mwdray@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "argparse>=1.4.0",
    "datetime>=5.5",
    "pathlib>=1.0.1",
    "python-dateutil>=2.9.0",
    "rich>=14.1.0",
]

[project.scripts]
jot = "jot.cli:main"

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"

[project.optional-dependencies]
dev = [
    "ruff>=0.11.10",
]