[project]
name = "jot"
version = "0.2.11.9000"
description = "Minimal opinionated Python CLI to jot timestamped thoughts."
readme = "README.md"
authors = [
    { name = "Matt Dray", email = "mwdray@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "python-dateutil>=2.9.0",
    "rich>=14.1.0",
]

[project.scripts]
jot = "jot.cli:main"

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
]
