[project]
name = "jot"
version = "0.2.11.9004"
description = "Minimal opinionated Python CLI to jot timestamped thoughts."
readme = "README.md"
authors = [
    { name = "Matt Dray", email = "mwdray+jot@gmail.com" }
]
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "platformdirs>=4.9.6",
    "python-dateutil>=2.9.0",
    "rich>=14.1.0",
]
keywords = ["cli", "notes", "productivity"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
]

[project.urls]
Repository = "https://github.com/matt-dray/jot"

[project.scripts]
jot = "jot.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
]

[build-system]
requires = ["uv_build>=0.11.11,<0.12"]
build-backend = "uv_build"
